fix: adding github user data to release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,11 @@ jobs:
         run: |
           poetry run pytest  # Ensure tests pass before releasing
 
+      - name: Set up Git user for bump
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Bump version
         run: |
           poetry run cz bump --yes  # Bump version based on commit messages
