--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,15 +41,11 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Bump version
+      - name: Bump version and push tag
         run: |
           poetry run cz bump --yes  # Bump version based on commit messages
           git add pyproject.toml
           git commit -m "chore: bump version [skip ci]"
-          git push origin main
-
-      - name: Push new Git tag
-        run: |
           NEW_VERSION=$(poetry version -s)
           git tag "v$NEW_VERSION"
-          git push --tags
+          git push origin main --tags
