--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,11 +41,15 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Bump version and push tag
+      - name: Bump version
         run: |
           poetry run cz bump --yes  # Bump version based on commit messages
+
+      - name: Push changes and tags
+        run: |
           git add pyproject.toml
           git commit -m "chore: bump version [skip ci]"
+          git push origin main
           NEW_VERSION=$(poetry version -s)
           git tag "v$NEW_VERSION"
-          git push origin main --tags
+          git push --tags
