fix: trying to fix commitzen

--- a/.cz.toml
+++ b/.cz.toml
@@ -1,3 +1,6 @@
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "2.1.0"
+
+[tool.commitizen.bump]
+commit_message = "chore: bump version to {version}"
+version_file = "pyproject.toml"  # This should point to your version file
