--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ packages = [
     { include = "source-interface-spotify" }
 ]
 
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "^2.22.0"
+
 [tool.poetry.dependencies]
 python = "^3.12"
 requests = "^2.32.3"
