--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "^2.22.0"
+version = "0.0.1"
 
 [tool.poetry.dependencies]
 python = "^3.12"
