fix: trying to fix versioning

--- a/.cz.toml
+++ b/.cz.toml
@@ -3,4 +3,4 @@ name = "cz_conventional_commits"
 
 [tool.commitizen.bump]
 commit_message = "chore: bump version to {version}"
-version_file = "pyproject.toml"  # This should point to your version file
+version_file = "pyproject.toml"  # Ensure this points to your version file
