--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,12 @@
 [tool.poetry]
 name = "source-interface-spotify"
-version = "0.0.1"
+version = "0.0.1"  # This will be updated automatically by Commitizen
 description = "Interface Package to get information from Spotify API. This is an installable package"
 authors = ["Somesh Garje <someshgargje@gmail.com>"]
 readme = "README.md"
 packages = [
     { include = "source-interface-spotify" }
 ]
-
-[tool.commitizen]
-name = "cz_conventional_commits"
-version = "1.0.0"
 
 [tool.poetry.dependencies]
 python = "^3.12"
