fix: trying to fix versioning

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,13 +62,14 @@ jobs:
       - name: Push new Git tag
         run: |
           NEW_VERSION=$(poetry version -s)
-          git fetch --tags
+          git fetch --tags  # Fetch all tags from the remote
           # Check if the tag already exists on the remote
           if git ls-remote --tags origin "v$NEW_VERSION"; then
             echo "Tag v$NEW_VERSION already exists, deleting it."
-            git tag -d "v$NEW_VERSION"  # Delete the local tag
-            git push origin --delete "v$NEW_VERSION"  # Delete the tag from remote
+            git tag -d "v$NEW_VERSION"  # Delete the local tag if it exists
+            git push origin --delete "v$NEW_VERSION" || echo "Tag not found on remote, skipping delete"  # Delete the tag from remote
           fi
-          # Create the new tag and push
+          # Create the new tag and push it
           git tag "v$NEW_VERSION"  # Create a new tag
           git push origin "v$NEW_VERSION"  # Push the new tag
+
