--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ version = "1.0.2"
 version_files = [
     "pyproject.toml:^version"
 ]
+bump_message = "bump: version $current_version → $new_version [skip-ci]"
 
 [tool.poetry.dependencies]
 python = "^3.12"
