--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Check for changes and push
         run: |
-          if [ "$(git status --porcelain)" ]; then
+          if [ "$(git status --ahead-behind)" ]; then
             git push origin main
           else
             echo "No changes to commit, skipping push."
