fix: adding toml to dependancy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ bump_message = "bump: version $current_version → $new_version [skip-ci]"
 python = "^3.12"
 requests = "^2.32.3"
 rauth = "^0.7.3"
+toml = "^0.10.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^6.2.5"
