--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ name = "cz_conventional_commits"
 version = "1.1.2"
 version_files = [
     "pyproject.toml:^version",
-    "source_interface_spotify._version.py"
+    "source_interface_spotify/_version.py"
 ]
 bump_message = "bump: version $current_version → $new_version [skip-ci]"
 
